# Author: Alexander Rykovanov 2009
#
# Distributed under the GNU GPL License
# (See accompanying file LICENSE or copy at 
# http://www.gnu.org/copyleft/gpl.html)
#
# $Id:  $
# $Date: $
# $Revision: $

SUBDIRS =

# linux com implementation.
if BUILD_LINUX_COM
SUBDIRS += linux_com
endif

# xpcom frontend library
if BUILD_XPCOM_SERVERS
SUBDIRS += xpcom
endif


